FIX: z-index in login

--- a/client/src/app/layout/components/header/header.component.scss
+++ b/client/src/app/layout/components/header/header.component.scss
@@ -37,3 +37,7 @@
 
 h1 { letter-spacing: 10px; font-family: 'Droid serif', serif; font-size: 36px; font-weight: 500; font-style: italic; line-height: 44px; margin: 0 0 12px; text-align: center; }
 p {font-style: italic;}
+
+.sticky-top{
+  z-index: 920;
+}
