--- a/client/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/client/src/app/layout/components/sidebar/sidebar.component.scss
@@ -158,3 +158,7 @@ $header-height: 216px;
     border-radius: 3px;
     -webkit-box-shadow: inset 0 0 3px rgba(255, 255, 255, 1);
 }
+
+.sticky-top{
+  z-index: 920;
+}
